--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -92,7 +92,7 @@
               <div class="row filtri-map">
                 <div class="col s6">
                   <h6 class="text-left showIfFirebase"><b>FOTO PUBBLICHE</b></h6>
-                  <h6 class="text-left showIfParse" style="display: none;"><b><span id="nome-album">Tutti i tuoi album</span></b></h6>
+                  <h6 class="text-left showIfParse" style="display: none;"><b><span id="nome-album" style="text-transform: uppercase;">Tutti i tuoi album</span></b></h6>
                 </div>
                 <div class="col s6 ">
                   <a id="filtri" class="waves-effect yellow darken-3 btn white-text" href="#modal-filtri"><i class="fa fa-sliders"></i> filtri </a>
@@ -375,15 +375,15 @@
     <!-- ASSETS SCRIPTS-->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/assets/jquery2.1.4.js"></script>
-    <script type="text/javascript" src="js/jquerymobile1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script type="text/javascript" src="js/jquerymobile1.4.5/jquery.mobile-1.4.5.min.js"></script> <!--
     <script type="text/javascript" src="js/assets/materialize.min.js"></script>
     <script type="text/javascript" src="js/assets/firebase.js"></script>
     <script type="text/javascript" src="js/assets/parse.min.js"></script>
     <script type="text/javascript" src="js/assets/markerclusterer.min.js"></script>
     <script type="text/javascript" src="js/assets/sha256.js"></script>
-    <!-- RELEASE ASSETS -->
-    <!--<script type="text/javascript" src="js/assets/assets.js"></script>-->
-    <!-- APPLICATION SCRIPTS -->
+    --><!-- RELEASE ASSETS -->
+    <script type="text/javascript" src="js/assets/assets.js"></script>
+    <!-- APPLICATION SCRIPTS --> <!--
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/firebaseFunctions.js"></script>
@@ -391,8 +391,8 @@
     <script type="text/javascript" src="js/map.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <!-- RELEASE MINIFIED SCRIPT -->
-    <!--<script type="text/javascript" src="js/release.js"></script>-->
+    --><!-- RELEASE MINIFIED SCRIPT -->
+    <script type="text/javascript" src="js/release.js"></script>
 </body>
 
 </html>
