--- a/www/index.html
+++ b/www/index.html
@@ -92,7 +92,7 @@
               <div class="row filtri-map">
                 <div class="col s6">
                   <h6 class="text-left showIfFirebase"><b>FOTO PUBBLICHE</b></h6>
-                  <h6 class="text-left showIfParse" style="display: none;"><b><span id="nome-album">Tutti i tuoi album</span></b></h6>
+                  <h6 class="text-left showIfParse" style="display: none;"><b><span id="nome-album" style="text-transform: uppercase;">Tutti i tuoi album</span></b></h6>
                 </div>
                 <div class="col s6 ">
                   <a id="filtri" class="waves-effect yellow darken-3 btn white-text" href="#modal-filtri"><i class="fa fa-sliders"></i> filtri </a>
